update gradle build files