@@ -22,12 +22,33 @@ repositories {
 }
 
 dependencies {
+    implementation(project(mapOf("path" to ":jsourceprofiler-common")))
     testImplementation(platform("org.junit:junit-bom:5.10.2"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("com.github.stefanbirkner:system-lambda:1.2.1")
 }
 
 tasks.test {
     useJUnitPlatform()
+    // TODO: remove as soon as replacement API https://bugs.openjdk.org/browse/JDK-8199704 is available
+    jvmArgs("-Djava.security.manager=allow")
+}
+
+val mainClass = "org.matwoess.jsourceprofiler.tool.cli.Main"
+
+tasks {
+    register("fatJar", Jar::class.java) {
+        archiveBaseName.set("profiler")
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+        manifest {
+            attributes["Main-Class"] = mainClass
+        }
+        from(configurations.runtimeClasspath.get()
+            .onEach { println("add from dependencies: ${it.name}") }
+            .map { if (it.isDirectory) it else zipTree(it) })
+        val sourcesMain = sourceSets.main.get()
+        from(sourcesMain.output)
+    }
 }
 
 publishing {
@@ -45,8 +66,8 @@ mavenPublishing {
     publishToMavenCentral(SonatypeHost.CENTRAL_PORTAL)
 
     pom {
-        name.set("java-profiler-common")
-        description.set("Provides common functions for both the profiler tool and its JavaFX UI module.")
+        name.set("jsourceprofiler-tool")
+        description.set("A command-line source code profiler for Java programs that generates HTML reports.")
         inceptionYear.set("2023")
         url.set("https://github.com/matwoess/java-profiler/")
         licenses {
